--- a/install-nextcloud-onlyoffice-postgres/docker-compose.yml
+++ b/install-nextcloud-onlyoffice-postgres/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3"
 services:
+  db:
+    restart: always
+    image: postgres:12.5-alpine
+    shm_size: 256mb
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "postgres"]
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
   app:
     container_name: app-server
     image: nextcloud:fpm
@@ -8,7 +16,9 @@ services:
       - "80"
       - "9000"
     volumes:
-      - app_data:/var/www/html
+      - ./app_data:/var/www/html
+    depends_on:
+      - db
   onlyoffice-document-server:
     container_name: onlyoffice-document-server
     image: onlyoffice/documentserver:latest
@@ -17,20 +27,15 @@ services:
       - "80"
       - "443"
     volumes:
-      - document_data:/var/www/onlyoffice/Data
-      - document_log:/var/log/onlyoffice
+      - ./document_data:/var/www/onlyoffice/Data
+      - ./document_log:/var/log/onlyoffice
   nginx:
     container_name: nginx-server
     image: nginx
     restart: always
     ports:
-      - 80:80
-      - 443:443
+      - 8081:80
+      - 4431:443
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - app_data:/var/www/html
-volumes:
-  document_data:
-  document_log:
-  app_data:
-  mysql_data:
+      - ./app_data:/var/www/html
